--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Paul 
+name: Paul vdB
 
 # Short bio or description (displayed in the header)
 description: Doing some @datascience in between playing ping-pong and doing some other work blah blah
